# captcha

./: CMakeLists.txt
include/: captcha.h  font.h
source/: captcha.cpp  main.cpp
