cmake_minimum_required(VERSION 3.28)
project(CMakeSFMLProject LANGUAGES CXX)
include(FetchContent)
set(BUILD_SHARED_LIBS OFF)
FetchContent_Declare(SFML GIT_REPOSITORY https://github.com/SFML/SFML.git GIT_TAG 3.0.2)
FetchContent_MakeAvailable(SFML)
add_executable(proga source/main.cpp source/captcha.cpp)
set_target_properties(proga PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON CXX_EXTENSIONS ON)
target_link_libraries(proga PRIVATE SFML::System SFML::Window SFML::Graphics)
target_include_directories(proga PRIVATE include)
add_custom_command(TARGET proga POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_SOURCE_DIR}/assets"   "${CMAKE_CURRENT_BINARY_DIR}/assets")